Fix RES Settings hidden behind header

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -820,7 +820,7 @@ a.choice[href$=controversial]:after {
 
 #header,
 body .modal {
-    z-index: 2147483647
+    z-index: 10000000
 }
 
 #sr-header-area {
