--- a/source/_link_bar.scss
+++ b/source/_link_bar.scss
@@ -9,7 +9,7 @@ table#srList tbody tr:last-of-type {
 
 .side .md>ul:nth-of-type(3) {
     position: fixed;
-    z-index: 2147483646;
+    z-index: 100000;
     top: 0;
     right: 0;
     margin: 0;
